force-app/main/default/objects/Web_Service_Log__c/Web_Service_Log__c.object-meta.xml
<CustomObject>
    <description>used to track number of callouts to web services and success or errors</description>
    <label>Web Service Log</label>
    <nameField>
        <displayFormat>call-{0000}</displayFormat>
        <label>CallNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Service Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>