force-app/main/default/objects/Web_Service_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>action associated with NamedFunction</inlineHelpText>
    <label>Action</label>
    <length>20</length>
    <type>Text</type>
</CustomField>