force-app/main/default/objects/Web_Service_Log__c/fields/CalledBy__c.field-meta.xml
<CustomField>
    <fullName>CalledBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Running User that called the service</inlineHelpText>
    <label>CalledBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Web_Service_Log</relationshipName>
    <type>Lookup</type>
</CustomField>