force-app/main/default/objects/Web_Service_Log__c/fields/CalledDT__c.field-meta.xml
<CustomField>
    <fullName>CalledDT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date/Time service was called</inlineHelpText>
    <label>CalledDT</label>
    <type>DateTime</type>
</CustomField>