force-app/main/default/objects/Web_Service_Log__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CreateDate</label>
    <type>Date</type>
</CustomField>