force-app/main/default/objects/Web_Service_Log__c/fields/ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>ErrorMsg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>error message returned from service</inlineHelpText>
    <label>ErrorMsg</label>
    <type>TextArea</type>
</CustomField>