force-app/main/default/objects/Web_Service_Log__c/fields/Invalid_Skill__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invalid Skill</label>
    <type>Checkbox</type>
</CustomField>