force-app/main/default/objects/Web_Service_Log__c/fields/NamedFunction__c.field-meta.xml
<CustomField>
    <fullName>NamedFunction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Named Function for OSB webservice</inlineHelpText>
    <label>Named Function</label>
    <length>80</length>
    <type>Text</type>
</CustomField>