force-app/main/default/objects/Web_Service_Log__c/fields/NbrAttempts__c.field-meta.xml
<CustomField>
    <fullName>NbrAttempts__c</fullName>
    <inlineHelpText>The number of attempts made to send the message</inlineHelpText>
    <label>Nbr Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>