force-app/main/default/objects/Web_Service_Log__c/fields/Rest_Response__c.field-meta.xml
<CustomField>
    <fullName>Rest_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rest Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>