force-app/main/default/objects/Web_Service_Log__c/fields/SecondsForCallout__c.field-meta.xml
<CustomField>
    <fullName>SecondsForCallout__c</fullName>
    <formula>IF (ISBLANK(ServiceEnd__c), 0, ((ServiceEnd__c - ServiceStart__c)*86400))</formula>
    <inlineHelpText>The number of seconds between the service start and service end fields</inlineHelpText>
    <label>Seconds For Callout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>