force-app/main/default/objects/Web_Service_Log__c/fields/SendMsg__c.field-meta.xml
<CustomField>
    <fullName>SendMsg__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>must be checked for DataFluxDeltaBatch job to pick up the record</inlineHelpText>
    <label>SendMsg</label>
    <type>Checkbox</type>
</CustomField>