force-app/main/default/objects/Web_Service_Log__c/fields/ServiceEnd__c.field-meta.xml
<CustomField>
    <fullName>ServiceEnd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Date/time the service call ended.</inlineHelpText>
    <label>Service End</label>
    <type>DateTime</type>
</CustomField>