force-app/main/default/objects/Web_Service_Log__c/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>name of service called</inlineHelpText>
    <label>ServiceName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>