force-app/main/default/objects/Web_Service_Log__c/fields/ServiceStart__c.field-meta.xml
<CustomField>
    <fullName>ServiceStart__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Date/time the service call started.</inlineHelpText>
    <label>Service Start</label>
    <type>DateTime</type>
</CustomField>