force-app/main/default/objects/Web_Service_Log__c/fields/SnowCaseCreated__c.field-meta.xml
<CustomField>
    <fullName>SnowCaseCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SnowCaseCreated</label>
    <type>Checkbox</type>
</CustomField>