force-app/main/default/objects/Web_Service_Log__c/fields/SobjId__c.field-meta.xml
<CustomField>
    <fullName>SobjId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SobjId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>