force-app/main/default/objects/Web_Service_Log__c/fields/SobjName__c.field-meta.xml
<CustomField>
    <fullName>SobjName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SobjName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>