force-app/main/default/objects/Web_Service_Log__c/fields/UC_Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>UC_Apex_Job_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UC Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>