force-app/main/default/objects/Web_Service_Log__c/fields/UC_Guid__c.field-meta.xml
<CustomField>
    <fullName>UC_Guid__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UC Guid</label>
    <length>40</length>
    <type>Text</type>
</CustomField>