force-app/main/default/objects/Web_Service_Log__c/fields/UC_Notes__c.field-meta.xml
<CustomField>
    <fullName>UC_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UC Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>