force-app/main/default/objects/Web_Service_Log__c/fields/UC_Retry__c.field-meta.xml
<CustomField>
    <fullName>UC_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UC_Retry</label>
    <type>Checkbox</type>
</CustomField>