force-app/main/default/objects/Web_Service_Log__c/fields/UC_Service__c.field-meta.xml
<CustomField>
    <fullName>UC_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UC Service?</label>
    <type>Checkbox</type>
</CustomField>