force-app/main/default/objects/Web_Service_Log__c/fields/UcRetryFailed__c.field-meta.xml
<CustomField>
    <fullName>UcRetryFailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry Failed?</label>
    <type>Checkbox</type>
</CustomField>