force-app/main/default/objects/Web_Service_Log__c/fields/UcServiceCaseId__c.field-meta.xml
<CustomField>
    <fullName>UcServiceCaseId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UcServiceCaseId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>