force-app/main/default/objects/Web_Service_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Successful__c</columns>
    <columns>CalledBy__c</columns>
    <columns>CalledDT__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>Notes__c</columns>
    <columns>ServiceName__c</columns>
    <columns>NbrRecs__c</columns>
    <columns>SendMsg__c</columns>
    <columns>ServiceEnd__c</columns>
    <columns>ServiceStart__c</columns>
    <columns>NbrAttempts__c</columns>
    <columns>CreateDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>