force-app/main/default/objects/Web_Service_Log__c/listViews/ARUpload.listView-meta.xml
<ListView>
    <fullName>ARUpload</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>Successful__c</columns>
    <columns>SendMsg__c</columns>
    <columns>NbrRecs__c</columns>
    <columns>ServiceStart__c</columns>
    <columns>ServiceEnd__c</columns>
    <columns>NbrAttempts__c</columns>
    <columns>NamedFunction__c</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>NamedFunction__c</field>
        <operation>equals</operation>
        <value>ARUpload</value>
    </filters>
    <label>ARUpload</label>
</ListView>