force-app/main/default/objects/Web_Service_Log__c/listViews/ClientspaceAPITest.listView-meta.xml
<ListView>
    <fullName>ClientspaceAPITest</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SobjName__c</columns>
    <columns>SobjId__c</columns>
    <columns>CalledBy__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SobjId__c</field>
        <operation>equals</operation>
        <value>0014u0000200PGtAAM</value>
    </filters>
    <filters>
        <field>ServiceStart__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:20</value>
    </filters>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>ClientspaceLocationQueueable</value>
    </filters>
    <label>ClientspaceAPI - test</label>
</ListView>