force-app/main/default/objects/Web_Service_Log__c/listViews/cpaServices.listView-meta.xml
<ListView>
    <fullName>cpaServices</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SobjName__c</columns>
    <columns>SobjId__c</columns>
    <columns>CalledBy__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreateDate__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3650</value>
    </filters>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>cpaServices</value>
    </filters>
    <label>cpaServices</label>
</ListView>