force-app/main/default/objects/Web_Service_Log__c/listViews/CS_ApiQueueable_logs_All_time.listView-meta.xml
<ListView>
    <fullName>CS_ApiQueueable_logs_All_time</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CalledBy__c</columns>
    <columns>CalledDT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>ClientspaceAPIQueueable</value>
    </filters>
    <label>CS ApiQueueable logs All time</label>
</ListView>