force-app/main/default/objects/Web_Service_Log__c/listViews/DF_Processed_Today_Success.listView-meta.xml
<ListView>
    <fullName>DF_Processed_Today_Success</fullName>
    <columns>NAME</columns>
    <columns>Successful__c</columns>
    <columns>SendMsg__c</columns>
    <columns>NbrRecs__c</columns>
    <columns>ServiceStart__c</columns>
    <columns>ServiceEnd__c</columns>
    <columns>NbrAttempts__c</columns>
    <columns>NamedFunction__c</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ServiceName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>DFDeltaSvc</value>
    </filters>
    <filters>
        <field>Successful__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>DF Processed Today - Success</label>
</ListView>