force-app/main/default/objects/Web_Service_Log__c/listViews/DF_Successfully_Sent.listView-meta.xml
<ListView>
    <fullName>DF_Successfully_Sent</fullName>
    <columns>NAME</columns>
    <columns>SendMsg__c</columns>
    <columns>Successful__c</columns>
    <columns>NamedFunction__c</columns>
    <columns>Action__c</columns>
    <columns>NbrAttempts__c</columns>
    <columns>ServiceStart__c</columns>
    <columns>ServiceEnd__c</columns>
    <columns>NbrRecs__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SendMsg__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Successful__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>DFDeltaSvc</value>
    </filters>
    <label>DF Successfully Sent</label>
</ListView>