force-app/main/default/objects/Web_Service_Log__c/listViews/DF_Today.listView-meta.xml
<ListView>
    <fullName>DF_Today</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>Successful__c</columns>
    <columns>SendMsg__c</columns>
    <columns>NbrAttempts__c</columns>
    <columns>NamedFunction__c</columns>
    <columns>Action__c</columns>
    <columns>NbrRecs__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceStart__c</columns>
    <columns>ServiceEnd__c</columns>
    <columns>ErrorMsg__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>DFDeltaSvc</value>
    </filters>
    <label>DF Today</label>
</ListView>