force-app/main/default/objects/Web_Service_Log__c/listViews/EmailChecker.listView-meta.xml
<ListView>
    <fullName>EmailChecker</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>Successful__c</columns>
    <columns>SecondsForCallout__c</columns>
    <columns>SendMsg__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>ServiceStart__c</columns>
    <columns>ServiceEnd__c</columns>
    <columns>ErrorMsg__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>EmailChecker</value>
    </filters>
    <label>EmailChecker</label>
</ListView>