force-app/main/default/objects/Web_Service_Log__c/listViews/EmailFileInsert_ASONewBusinessCase.listView-meta.xml
<ListView>
    <fullName>EmailFileInsert_ASONewBusinessCase</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>Successful__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>SendMsg__c</columns>
    <columns>NbrRecs__c</columns>
    <columns>ServiceStart__c</columns>
    <columns>ServiceEnd__c</columns>
    <columns>NbrAttempts__c</columns>
    <columns>NamedFunction__c</columns>
    <columns>Action__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ServiceName__c</field>
        <operation>equals</operation>
        <value>EmailFileInsert</value>
    </filters>
    <filters>
        <field>NamedFunction__c</field>
        <operation>equals</operation>
        <value>ASONewBusinessCase</value>
    </filters>
    <label>EmailFileInsert - ASONewBusiness</label>
</ListView>