force-app/main/default/objects/Web_Service_Log__c/listViews/Logs_from_last_5_days.listView-meta.xml
<ListView>
    <fullName>Logs_from_last_5_days</fullName>
    <columns>NAME</columns>
    <columns>ServiceName__c</columns>
    <columns>Action__c</columns>
    <columns>SendMsg__c</columns>
    <columns>Successful__c</columns>
    <columns>NbrRecs__c</columns>
    <columns>NbrAttempts__c</columns>
    <columns>ErrorMsg__c</columns>
    <columns>CalledDT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CalledDT__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <label>Logs from last 5 days</label>
</ListView>